# ChangeLog for Gentoo Linux Installer
# Copyright 2005-2005 Gentoo Technologies, Inc.

# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.379 2005/09/16 19:45:10 codeman Exp $

*GLI-0.2 (4 Aug 2005)

  16 Sep 2005; Preston Cody <codeman@gentoo.org>
  src/GenDialog.py
  added a sentence of text.  unchecking support added.
  
  15 Sep 2005; Preston Cody <codeman@gentoo.org>
  src/GLIUtility.py
  added get_grp_pkgs_from_cd() to return a list of packages in GRP for FE menus
  src/GenDialog.py 
  still working on extra_packages. transformed the list to new format.
  added GRP indication to list.  untested.
  TODO lists updated.
  src/fe/dialog/gli-dialog.py
  spelling mistook.
  
  14 Sep 2005; Andrew Gaffney <agaffney@gentoo.org>
  src/GLIUtility.py:
  get_snapshot_from_cd() returns '' instead of 'file://' if nothing found

  5 Sep 2005; Andrew Gaffney <agaffney@gentoo.org>
  src/GLIUtility.py:
  add get_directory_listing_from_uri()
  add http support to above
  add ftp support to above
  add scp support to above
  src/GLIArchitectureTemplate.py:
  "0" instead of 0 for key of single-element dict passed to _edit_config()

  5 Sep 2005; Preston Cody <codeman@gentoo.org>
  value_only -> only_value
  
  3 Sep 2005; Preston Cody <codeman@gentoo.org>
  gutted out all of etc_portage structure since it is now all handled by
  etc_files
  
  3 Sep 2005; Andrew Gaffney <agaffney@gentoo.org>
  src/GLIArchitectureTemplate.py:
  install_packages() sends progress update notifications
  src/templates/x86ArchitectureTemplate.py:
  increase sleep to 5s between format tries
  src/GLIClientController.py:
  pass 'self' to AT instead of 'self._pretend'

  2 Sep 2005; Preston Cody <codeman@gentoo.org>
  logger -> logger.log in x86AT

  1 Sep 2005; Preston Cody <codeman@gentoo.org>
  added set_etc_portage to IP. debugging gli-d's support for it.
  
  1 Sep 2005; Andrew Gaffney <agaffney@gentoo.org>
  src/templates/x86ArchitectureTemplate.py: