@@ -1,9 +1,13 @@
 # ChangeLog for Gentoo Linux Installer
 # Copyright 2005-2005 Gentoo Technologies, Inc.
 
-# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.379 2005/09/16 19:45:10 codeman Exp $
+# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.380 2005/09/17 03:45:35 agaffney Exp $
 
 *GLI-0.2 (4 Aug 2005)
+
+  16 Sep 2005; Andrew Gaffney <agaffney@gentoo.org>
+  src/GLIUtility.py:
+  add rot13ify() function
 
   16 Sep 2005; Preston Cody <codeman@gentoo.org>
   src/GenDialog.py
